--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 h1{
   margin-top: -70px;
   padding-bottom: 110px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:  Arial, Helvetica, sans-serif;
   text-transform: uppercase;
   font-size: 50px;
 }
@@ -30,7 +30,7 @@ h1{
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(94, 47, 176);
+  background: rgb(255, 255, 255);
   border-radius: 50px;
 }
 
@@ -41,7 +41,7 @@ h1{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: rgb(53, 12, 100);
+  background: rgb(120, 49, 200);
   border-radius: 50px;
 }
 
