--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ span {
 }
 
 #iniciar {
-  background: greenyellow;
+  background: #adff2f;
   border: none;
   padding: 8px 40px;
   margin-top: 30px;
